<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VHBB Android</string>

    <string name="nav_header_subtitle">Created by Electric1447 and SSMG4</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="err_network_not_available">Network not available</string>
    <string name="err_repo_invalid_url">Invalid Repo URL</string>
    <string name="err_parse_file_extension">Error while parsing file extension</string>

    <string name="menu_homebrew">Homebrew</string>
    <string name="menu_homebrew_vitadb">VitaDB</string>
    <string name="menu_psp">PSP Homebrew</string>
    <string name="menu_plugins">Plugins</string>
    <string name="menu_cbpsdb">CBPS-DB</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_customrepo">Custom Repo</string>
    <string name="menu_transfer">Transfer to Vita</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_vitadb">Visit VitaDB</string>
    <string name="menu_source_code">Source Code</string>
    <string name="menu_search">Search</string>
    <string name="menu_all">All</string>
    <string name="menu_original_games">Original Games</string>
    <string name="menu_game_ports">Game Ports</string>
    <string name="menu_utilities">Utilities</string>
    <string name="menu_emulators">Emulators</string>

    <string name="details_author">Author:</string>
    <string name="details_date">Release Date:</string>
    <string name="details_source">Source Page</string>
    <string name="details_release">Release Page</string>
    <string name="details_desc">Description:</string>
    <string name="details_options">Options:</string>
    <string name="details_readme">README</string>
    <string name="menu_data">Data</string>
    <string name="details_titleid">Title ID:</string>
    <string name="details_ai">AI Used:</string>
    <string name="details_ai_yes">Yes</string>
    <string name="details_ai_no">No</string>
    <string name="qr_vpk_label">VPK Download QR</string>
    <string name="qr_data_label">Data Download QR</string>
    <string name="details_readme_loading">Loading README…</string>
    <string name="details_readme_error">Failed to load README.</string>
    <string name="details_closed_source">CLOSED SOURCE</string>

    <string name="customrepo_refresh_title">Please enter a valid repo URL.</string>
    <string name="customrepo_refresh">Refresh</string>
    <string name="customrepo_dialog_title">Repository URL:</string>

    <string name="prefs_custom_download_location_title">Custom download location</string>
    <string name="prefs_custom_download_location_summery">Choose a custom download location.</string>
    <string name="prefs_custom_download_location_key">download-location</string>

    <string name="prefs_cache_title">Clear Cache</string>
    <string name="prefs_cache_summery">Clear the application\'s cache.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="downloading">Downloading…</string>

    <string name="transfer_tab_ftp">FTP</string>
    <string name="transfer_tab_usb">USB / OTG</string>
    <string name="transfer_ftp_title">FTP Transfer</string>
    <string name="transfer_usb_title">USB / OTG Transfer</string>
    <string name="transfer_ftp_hint">Open VitaShell on your PS Vita and press SELECT to start the FTP server. Enter the IP address shown on screen below.</string>
    <string name="transfer_usb_hint">Connect your PS Vita via OTG cable with VitaShell open, then select a file and a destination folder on your Vita.</string>
    <string name="transfer_ip_label">PS Vita IP Address</string>
    <string name="transfer_ftp_ip_hint">192.168.1.x</string>
    <string name="transfer_ftp_path_label">Remote path on Vita</string>
    <string name="transfer_ftp_path_hint">/ux0:data/</string>
    <string name="transfer_file_label">File to transfer</string>
    <string name="transfer_usb_dest_label">Destination folder on Vita</string>
    <string name="transfer_pick_file">+ Files</string>
    <string name="transfer_pick_folder">+ Folder</string>
    <string name="transfer_pick_btn">+ Browse</string>
    <string name="transfer_usb_pick_dest">Pick Folder</string>
    <string name="transfer_no_file_selected">No files selected</string>
    <string name="transfer_no_dest_selected">No destination selected</string>
    <string name="transfer_files_selected_prefix"> files selected</string>
    <string name="transfer_send_btn">Send to PS Vita</string>
    <string name="transfer_send">Send to PS Vita</string>

    <string name="transfer_vita_connected">PS Vita detected</string>
    <string name="transfer_vita_not_connected">No PS Vita detected</string>
    <string name="transfer_connecting">Connecting…</string>
    <string name="transfer_uploading">Uploading…</string>
    <string name="transfer_success">Transfer complete!</string>
    <string name="transfer_error">Error: %1$s</string>
    <string name="transfer_ftp_no_ip">Please enter the PS Vita IP address</string>
    <string name="transfer_no_file">Please select a file or folder first</string>
    <string name="transfer_ftp_failed">Transfer failed — check that VitaShell FTP is active</string>
    <string name="transfer_usb_no_write">Cannot write to selected destination</string>

    <string name="usb_hint_body">Your PS Vita is connected via USB. To transfer files, use VitaShell\'s FTP mode over Wi-Fi. Direct USB file transfer requires Sony\'s proprietary VitaMTP protocol and is not supported on Android.</string>

    <string name="permutils_title">Permission needed</string>
    <string name="permutils_message">Storage permission is needed to download files</string>

    <string name="trophy_title">Trophies</string>
    <string name="filebrowser_pick_file">Pick File</string>
    <string name="filebrowser_pick_folder">Pick Folder</string>
    <string name="filebrowser_select_folder">Select This Folder</string>
    <string name="filebrowser_parent_dir">Parent directory</string>
    <string name="filebrowser_folder">Folder</string>
    <string name="trophy_none">No trophies found for this title.</string>
    <string name="trophy_error">Failed to load trophies.</string>
    <string name="filebrowser_perm_title">Storage Permission Required</string>
    <string name="filebrowser_perm_message">This app needs access to all files to browse and transfer content to your PS Vita. Please grant permission in the next screen.</string>
</resources>
